tests/neg/clashes.scala
object Test {
  class C
  type C   // error
}

object Test  // error
